--- a/robot_arm/CMakeLists.txt
+++ b/robot_arm/CMakeLists.txt
@@ -53,16 +53,17 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
    FILES
-   arm_angles.msg
+   arm_dists.msg
+   camera_dists.msg
 #   Message2.msg
 )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
+#add_service_files(
+#    FILES
 #   Service1.srv
-#   Service2.srv
-# )
+#   Service2.srv 
+#)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
